<resources>
    <string name="app_name">Navegando entre Telas</string>
    <string name="primeira_tela">Primeira Tela</string>
    <string name="nome">Nome</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="senha">Senha</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="entrar">Entrar</string>
    <string name="bem_vindo">Bem vindo,</string>
    <string name="inclusao_clientes">Inclusão de Clientes</string>
    <string name="voltar">Voltar</string>
    <string name="matricula">Matrícula</string>
    <string name="digite_a_matricula">Digite a matrícula</string>
</resources>